projects/umc/user-manual-service/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: logic
  name: logic-svc
  namespace: umc-dev
spec:
  ports:
    - port: 4001
      protocol: TCP
      targetPort: 4001
  selector:
    app: logic
