projects/umc/user-manual-service/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logic
  namespace: umc-dev
  labels:
    app: logic
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
spec:
  ingressClassName: public
  tls:
    - hosts:
        -  umc-manual-dev.coherent.in
      secretName: logic-tls
  rules:
    - host: "umc-manual-dev.coherent.in"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logic-svc
                port:
                  number: 4001
